2006-01-02  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.5.

==================== 0.4 ====================

2006-01-02  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.4.

2005-12-12  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: use brackets in AC_INIT

2005-12-12  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.4.

==================== 0.3 ====================

2005-12-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.3.

2005-12-10  Ankit Patel  <ankit644@yahoo.com>

	* configure.ac: Added 'gu' (Gujarati) to ALL_LINGUAS.

2005-12-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac: Added 'th' (Thai) to ALL_LINGUAS.

2005-12-02  Josep puigdemont  <josep.puigdemont@gmail.com>

	* configure.ac: Added "ca" to ALL_LINGUAS

2005-11-27  Christian Rose  <menthos@menthos.com>

	* configure.ac: Added "sv" to ALL_LINGUAS.

2005-11-20  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Add nb to ALL_LINGUAS.

2005-11-20  Amanpreet Singh Alam <amanpreetalam@yahoo.com>

	* configure.ac: pa (Punjabi) is added to ALL_LINGUAS

2005-11-17  Alexander Shopov  <ash@contact.bg>

	* configure.ac: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-11-15  Žygimantas Beručka  <zygis@gnome.org>

	* configure.in: Added Lithuanian to ALL_LINGUAS.

2005-11-14  Dennis Cranston  <dennis_cranston@yahoo.com>

	* data/pessulus.glade: Fix a recent border width regression.

2005-11-14  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.ac: Added 'gl' to ALL_LINGUAS.

2005-11-14  Marcel Telka  <marcel@telka.sk>

	* configure.ac (ALL_LINGUAS): Added sk.

2005-11-14  Ilkka Tuohela  <hile@iki.fi>

	* configure.ac: Added Finnish translation to ALL_LINGUAS

2005-11-14  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 0.2.

==================== 0.2 ====================

2005-11-14  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 0.2.
